--- a/index.html
+++ b/index.html
@@ -45,9 +45,15 @@
             <div class="login__register">
                Don't have an account? <a href="#">Register</a>
             </div>
+            <div class="login__success" style="display: none;">
+  <h2 class="login__title">Welcome!</h2>
+  <p class="login__text" id="user-email"></p>
+  <button id="logout-btn" class="login__button">Logout</button>
+            </div>
          </form>
       </div>
       <script type="module" src="auth.js"></script>
    </body>
 
 </html>
+
