--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--=============== REMIXICONS ===============-->
+    <!-- Remix Icons -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"
       crossorigin=""
     />
 
-    <!--=============== CSS ===============-->
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <title>Login form</title>
@@ -20,8 +20,8 @@
     <div class="login">
       <img src="assets/img/login-bg.png" alt="image" class="login__bg" />
 
-      <!-- ✅ فرم ورود -->
-      <form action="" class="login__form" id="login-form">
+      <!-- فرم ورود: ابتدا مخفی (جلوگیری از فلش) -->
+      <form action="" class="login__form" id="login-form" style="display: none;">
         <h1 class="login__title">Login</h1>
 
         <div class="login__inputs">
@@ -55,14 +55,20 @@
         </div>
       </form>
 
-      <!-- ✅ بخش خوش‌آمد -->
-      <div class="login__success" id="login-success" style="display: none">
+      <!-- بخش خوش‌آمد: مخفی -->
+      <div class="login__success" id="login-success" style="display: none;">
         <h2 class="login__title">Welcome!</h2>
         <p class="login__text" id="user-email"></p>
         <button id="logout-btn" class="login__button">Logout</button>
       </div>
+
+      <!-- لودینگ (اختیاری اما حرفه‌ای) -->
+      <div class="login__loading" id="loading" style="text-align: center; padding: 2rem;">
+        <p>Loading...</p>
+      </div>
     </div>
 
+    <!-- اسکریپت در انتهای body -->
     <script type="module" src="auth.js"></script>
   </body>
 </html>
