--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
    <!-- REMIXICONS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
 
-   <!-- CSS اصلی (بدون تغییر) -->
+   <!-- CSS اصلی -->
    <link rel="stylesheet" href="assets/css/styles.css">
 
-   <title>Login form - Bedimcode</title>
+   <title>Login | Kingo Compressor</title>
 </head>
 <body>
    <div class="login">
       <img src="assets/img/login-bg.png" alt="image" class="login__bg">
 
-      <!-- فرم ورود: id اضافه شد + input ها id دارند -->
+      <!-- فرم ورود -->
       <form action="" class="login__form" id="login-form" style="display: none;">
          <h1 class="login__title">Login</h1>
 
@@ -37,7 +37,6 @@
                <input type="checkbox" class="login__check-input" id="user-check">
                <label for="user-check" class="login__check-label">Remember me</label>
             </div>
-
             <a href="#" class="login__forgot">Forgot Password?</a>
          </div>
 
@@ -48,20 +47,12 @@
          </div>
       </form>
 
-      <!-- بخش خوش‌آمد: بعد از لاگین نمایش داده می‌شود -->
-      <div class="login__success" id="login-success" style="display: none; text-align: center; padding: 2rem;">
-         <h2 class="login__title">خوش آمدید!</h2>
-         <p class="login__text" id="user-email" style="font-size: 1.1rem; margin: 1rem 0; color: #fff;"></p>
-         <button id="logout-btn" class="login__button">خروج</button>
-      </div>
-
-      <!-- لودینگ: تا وقتی وضعیت مشخص نشده -->
+      <!-- لودینگ -->
       <div id="loading" style="text-align: center; padding: 2rem; color: #fff; display: block;">
          <p>در حال بارگذاری...</p>
       </div>
    </div>
 
-   <!-- اسکریپت در انتها -->
    <script type="module" src="auth.js"></script>
 </body>
 </html>
