--- a/index.html
+++ b/index.html
@@ -3,35 +3,26 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-   <!-- REMIXICONS -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
-
-   <!-- CSS اصلی -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css">
    <link rel="stylesheet" href="assets/css/styles.css">
-
    <title>Login | Kingo Compressor</title>
 </head>
 <body>
    <div class="login">
       <img src="assets/img/login-bg.png" alt="image" class="login__bg">
 
-      <!-- فرم ورود -->
       <form action="" class="login__form" id="login-form" style="display: none;">
          <h1 class="login__title">Login</h1>
-
          <div class="login__inputs">
             <div class="login__box">
                <input type="email" id="email" placeholder="Email ID" required class="login__input">
                <i class="ri-mail-fill"></i>
             </div>
-
             <div class="login__box">
                <input type="password" id="password" placeholder="Password" required class="login__input">
                <i class="ri-lock-2-fill"></i>
             </div>
          </div>
-
          <div class="login__check">
             <div class="login__check-box">
                <input type="checkbox" class="login__check-input" id="user-check">
@@ -39,15 +30,12 @@
             </div>
             <a href="#" class="login__forgot">Forgot Password?</a>
          </div>
-
          <button type="submit" class="login__button">Login</button>
-
          <div class="login__register">
             Don't have an account? <a href="#">Register</a>
          </div>
       </form>
 
-      <!-- لودینگ -->
       <div id="loading" style="text-align: center; padding: 2rem; color: #fff; display: block;">
          <p>در حال بارگذاری...</p>
       </div>
