--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </form>
 
       <!-- لودینگ -->
-      <div id="loading" style="text-align: center; padding: 2rem; color: #fff; display: block;">
+      <div id="loading" style="text-align: center; padding: 2rem; color: #fff;">
          <p>در حال بارگذاری...</p>
       </div>
    </div>
