--- a/index.html
+++ b/index.html
@@ -23,23 +23,35 @@
          animation: spin 1s linear infinite;
       }
       @keyframes spin {
-         0% {transform: rotate(0);}
-         100% {transform: rotate(360deg);}
+         0% { transform: rotate(0); }
+         100% { transform: rotate(360deg); }
       }
-      .success-btn {
+      .login__button {
          background-color: #fff;
          color: #000;
          padding: 12px 20px;
          border-radius: 8px;
-         display: inline-block;
-         margin: 8px;
-         text-decoration: none;
+         border: none;
          font-weight: 500;
+         cursor: pointer;
+         width: 100%;
+         max-width: 300px;
+         margin-top: 1rem;
       }
-      #login-success a {
+      #login-success .action-buttons {
+         margin-top: 1.5rem;
+         display: flex;
+         flex-direction: column;
+         gap: 12px;
+      }
+      #login-success .text-button {
+         background: none;
+         border: none;
          color: #fff;
          text-decoration: underline;
-         margin: 0 8px;
+         cursor: pointer;
+         font-size: 1rem;
+         padding: 4px;
       }
    </style>
 </head>
@@ -48,7 +60,7 @@
       <img src="assets/img/login-bg.png" alt="image" class="login__bg">
 
       <!-- فرم ورود -->
-      <form action="" class="login__form" id="login-form" style="display: none;">
+      <form class="login__form" id="login-form" style="display: none;">
          <h1 class="login__title">ورود</h1>
          <div class="login__inputs">
             <div class="login__box">
@@ -67,7 +79,7 @@
       </form>
 
       <!-- فرم ثبت‌نام -->
-      <form action="" class="login__form" id="register-form" style="display: none;">
+      <form class="login__form" id="register-form" style="display: none;">
          <h1 class="login__title">ثبت‌نام</h1>
          <div class="login__inputs">
             <div class="login__box">
@@ -95,15 +107,14 @@
       <div id="login-success">
          <h2>ورود با موفقیت انجام شد</h2>
          <p>اگر اپلیکیشن باز نشد، می‌توانید:</p>
-         <button id="open-app" class="login__button" style="margin-top:1rem; width:100%; max-width:300px;">بازگشت به اپلیکیشن</button>
-         <div style="margin-top:1rem;">
-            <a href="#" id="account-details">جزئیات اکانت</a> |
-            <a href="#" id="change-account">تغییر حساب</a>
+         <button id="open-app" class="login__button">بازگشت به اپلیکیشن</button>
+         <div class="action-buttons">
+            <button id="account-details" class="text-button">جزئیات اکانت</button>
+            <button id="change-account" class="text-button">تغییر حساب</button>
          </div>
       </div>
    </div>
 
-   <!-- فقط یک اسکریپت -->
    <script type="module" src="auth.js"></script>
 </body>
 </html>
