--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          0% { transform: rotate(0); }
          100% { transform: rotate(360deg); }
       }
-      .login__button {
+      .login__button, .google-btn {
          background-color: #fff;
          color: #000;
          padding: 12px 20px;
@@ -37,6 +37,12 @@
          width: 100%;
          max-width: 300px;
          margin-top: 1rem;
+      }
+      .google-btn {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         gap: 8px;
       }
       #login-success .action-buttons {
          margin-top: 1.5rem;
@@ -73,6 +79,9 @@
             </div>
          </div>
          <button type="submit" class="login__button">ورود</button>
+         <button type="button" id="login-google" class="google-btn">
+           <img src="assets/img/google-logo.png" width="20" height="20" /> ورود با گوگل
+         </button>
          <div class="login__register">
             حساب ندارید؟ <a href="#" id="show-register">ثبت‌نام کنید</a>
          </div>
@@ -92,6 +101,9 @@
             </div>
          </div>
          <button type="submit" class="login__button">ثبت‌نام</button>
+         <button type="button" id="register-google" class="google-btn">
+           <img src="assets/img/google-logo.png" width="20" height="20" /> ثبت‌نام با گوگل
+         </button>
          <div class="login__register">
             حساب دارید؟ <a href="#" id="show-login">وارد شوید</a>
          </div>
