--- a/index.html
+++ b/index.html
@@ -7,61 +7,78 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <title>Login | Kingo Compressor</title>
   <style>
-    #loading, #login-success {
-      text-align: center;
-      color: #fff;
-      padding: 2rem;
-      display: none;
-    }
-    .loader {
-      border: 5px solid rgba(255,255,255,0.2);
-      border-top: 5px solid #fff;
-      border-radius: 50%;
-      width: 60px;
-      height: 60px;
-      margin: 0 auto 1rem;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0); }
-      100% { transform: rotate(360deg); }
-    }
-    .login__button {
-      background-color: #fff;
-      color: #000;
-      padding: 12px 20px;
-      border-radius: 8px;
-      border: none;
-      font-weight: 500;
-      cursor: pointer;
-      width: 100%;
-      max-width: 300px;
-      margin-top: 1rem;
-    }
-    .google-button {
-      background: #4285F4;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-    }
-    #login-success .action-buttons {
-      margin-top: 1.5rem;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
-    #login-success .text-button {
-      background: none;
-      border: none;
-      color: #fff;
-      text-decoration: underline;
-      cursor: pointer;
-      font-size: 1rem;
-      padding: 4px;
-    }
-  </style>
+  /* لودینگ و پیام موفقیت — اصلاح شده برای نمایش صحیح */
+  #loading,
+  #login-success {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    text-align: center;
+    color: #fff;
+    padding: 2rem;
+    display: none;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 1rem;
+    min-width: 280px;
+    max-width: 90%;
+  }
+
+  .loader {
+    border: 5px solid rgba(255, 255, 255, 0.2);
+    border-top: 5px solid #fff;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    margin: 0 auto 1rem;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .login__button {
+    background-color: #fff;
+    color: #000;
+    padding: 12px 20px;
+    border-radius: 8px;
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
+    width: 100%;
+    max-width: 300px;
+    margin-top: 1rem;
+  }
+
+  .google-button {
+    background: #4285F4;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+  }
+
+  #login-success .action-buttons {
+    margin-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  #login-success .text-button {
+    background: none;
+    border: none;
+    color: #fff;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 4px;
+  }
+    </style>
 </head>
 <body>
   <div class="login">
@@ -155,3 +172,4 @@
   </script>
 </body>
 </html>
+
