--- a/index.html
+++ b/index.html
@@ -7,78 +7,80 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <title>Login | Kingo Compressor</title>
   <style>
-  /* لودینگ و پیام موفقیت — اصلاح شده برای نمایش صحیح */
-  #loading,
-  #login-success {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 10;
-    text-align: center;
-    color: #fff;
-    padding: 2rem;
-    display: none;
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 1rem;
-    min-width: 280px;
-    max-width: 90%;
-  }
+    /* لودینگ، موفقیت و دیالوگ تأیید ایمیل */
+    #loading,
+    #login-success,
+    #email-verify-wait {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      text-align: center;
+      color: #fff;
+      padding: 2rem;
+      display: none;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 1rem;
+      min-width: 280px;
+      max-width: 90%;
+    }
 
-  .loader {
-    border: 5px solid rgba(255, 255, 255, 0.2);
-    border-top: 5px solid #fff;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    margin: 0 auto 1rem;
-    animation: spin 1s linear infinite;
-  }
+    .loader {
+      border: 5px solid rgba(255, 255, 255, 0.2);
+      border-top: 5px solid #fff;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      margin: 0 auto 1rem;
+      animation: spin 1s linear infinite;
+    }
 
-  @keyframes spin {
-    0% { transform: rotate(0); }
-    100% { transform: rotate(360deg); }
-  }
+    @keyframes spin {
+      0% { transform: rotate(0); }
+      100% { transform: rotate(360deg); }
+    }
 
-  .login__button {
-    background-color: #fff;
-    color: #000;
-    padding: 12px 20px;
-    border-radius: 8px;
-    border: none;
-    font-weight: 500;
-    cursor: pointer;
-    width: 100%;
-    max-width: 300px;
-    margin-top: 1rem;
-  }
+    .login__button {
+      background-color: #fff;
+      color: #000;
+      padding: 12px 20px;
+      border-radius: 8px;
+      border: none;
+      font-weight: 500;
+      cursor: pointer;
+      width: 100%;
+      max-width: 300px;
+      margin-top: 1rem;
+    }
 
-  .google-button {
-    background: #4285F4;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-  }
+    .google-button {
+      background: #4285F4;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+    }
 
-  #login-success .action-buttons {
-    margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
+    #login-success .action-buttons,
+    #email-verify-wait .action-buttons {
+      margin-top: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
 
-  #login-success .text-button {
-    background: none;
-    border: none;
-    color: #fff;
-    text-decoration: underline;
-    cursor: pointer;
-    font-size: 1rem;
-    padding: 4px;
-  }
-    </style>
+    .text-button {
+      background: none;
+      border: none;
+      color: #fff;
+      text-decoration: underline;
+      cursor: pointer;
+      font-size: 1rem;
+      padding: 4px;
+    }
+  </style>
 </head>
 <body>
   <div class="login">
@@ -99,7 +101,6 @@
       </div>
       <button type="submit" class="login__button">ورود</button>
 
-      <!-- دکمه ورود با گوگل -->
       <div style="text-align: center; margin-top: 1rem;">
         <button type="button" id="google-login" class="login__button google-button">
           <i class="ri-google-fill"></i>
@@ -127,7 +128,6 @@
       </div>
       <button type="submit" class="login__button">ثبت‌نام</button>
 
-      <!-- دکمه ورود با گوگل -->
       <div style="text-align: center; margin-top: 1rem;">
         <button type="button" id="google-login-2" class="login__button google-button">
           <i class="ri-google-fill"></i>
@@ -143,7 +143,7 @@
     <!-- لودینگ -->
     <div id="loading">
       <div class="loader"></div>
-      <p>در حال ورود...</p>
+      <p>در حال پردازش...</p>
     </div>
 
     <!-- پیام موفقیت -->
@@ -156,20 +156,29 @@
         <button id="change-account" class="text-button">تغییر حساب</button>
       </div>
     </div>
+
+    <!-- دیالوگ انتظار تأیید ایمیل -->
+    <div id="email-verify-wait">
+      <h2>تایید ایمیل</h2>
+      <p>📧 لطفاً به صندوق ایمیل خود بروید و روی لینک تأیید کلیک کنید.</p>
+      <button id="check-email-confirmed" class="login__button">تایید کردم</button>
+      <div class="action-buttons">
+        <button id="resend-email" class="text-button">ارسال مجدد ایمیل</button>
+        <button id="cancel-verify" class="text-button">لغو</button>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="auth.js"></script>
 
-  <!-- اتصال دکمه گوگل در فرم ثبت‌نام به همان تابع -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       const btn1 = document.getElementById("google-login");
       const btn2 = document.getElementById("google-login-2");
       if (btn2 && btn1) {
-        btn2.onclick = btn1.onclick;
+        btn2.onclick = () => btn1.click();
       }
     });
   </script>
 </body>
 </html>
-
