--- a/account.html
+++ b/account.html
@@ -4,35 +4,178 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>حساب کاربری | Kingo Compressor</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
+  <style>
+    /* همان استایل‌های لودینگ و دیالوگ از index.html */
+    #loading,
+    #account-section,
+    #not-logged-in {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 10;
+      text-align: center;
+      color: #fff;
+      padding: 2rem;
+      display: none;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 1rem;
+      min-width: 280px;
+      max-width: 90%;
+      backdrop-filter: blur(16px);
+    }
+
+    .loader {
+      border: 5px solid rgba(255, 255, 255, 0.2);
+      border-top: 5px solid #fff;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      margin: 0 auto 1rem;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .account-info {
+      background: rgba(255,255,255,0.1);
+      padding: 1.5rem;
+      border-radius: 12px;
+      margin: 1rem 0;
+      color: white;
+      text-align: right;
+      font-size: 0.95rem;
+    }
+
+    .account-info p {
+      margin: 0.75rem 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .account-info strong {
+      margin-left: 8px;
+    }
+
+    .copy-btn {
+      background: none;
+      border: none;
+      color: #aaa;
+      cursor: pointer;
+      font-size: 1.1rem;
+    }
+
+    .copy-btn:hover {
+      color: #fff;
+    }
+
+    .action-buttons {
+      margin-top: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .text-button {
+      background: none;
+      border: none;
+      color: #fff;
+      text-decoration: underline;
+      cursor: pointer;
+      font-size: 1rem;
+      padding: 4px;
+    }
+
+    .login__button {
+      background-color: #fff;
+      color: #000;
+      padding: 12px 20px;
+      border-radius: 8px;
+      border: none;
+      font-weight: 500;
+      cursor: pointer;
+      width: 100%;
+      max-width: 300px;
+      margin-top: 1rem;
+    }
+
+    .danger-button {
+      background-color: #ef4444;
+      color: white;
+    }
+
+    .google-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      background: #4285F4;
+      color: white;
+      padding: 6px 12px;
+      border-radius: 2rem;
+      font-size: 0.85rem;
+      margin-top: 0.5rem;
+    }
+  </style>
 </head>
 <body>
   <div class="login" style="min-height: 100vh;">
     <img src="assets/img/login-bg.png" alt="bg" class="login__bg" />
 
-    <div class="login__form" id="account-section" style="max-width: 420px; margin: 2rem auto; display: none;">
-      <h1 class="login__title">حساب کاربری</h1>
+    <!-- لودینگ -->
+    <div id="loading">
+      <div class="loader"></div>
+      <p>در حال بررسی وضعیت...</p>
+    </div>
 
-      <div style="background: rgba(255,255,255,0.1); padding: 1.5rem; border-radius: 12px; margin: 1rem 0; color: white; backdrop-filter: blur(10px);">
-        <p><strong>ایمیل:</strong> <span id="user-email">-</span></p>
-        <p><strong>شناسه:</strong> <span id="user-id">-</span></p>
-        <p><strong>ورود در:</strong> <span id="login-time">-</span></p>
-      </div>
+    <!-- حساب کاربری -->
+    <div id="account-section">
+      <div style="max-width: 420px; margin: 2rem auto;">
+        <h1 class="login__title" style="text-align: center;">حساب کاربری</h1>
 
-      <button id="logout-btn" class="login__button">خروج از حساب</button>
-      <div style="margin-top: 1rem; text-align: center;">
-        <a href="/Kingo-compressor/" style="color: #ccc; font-size: 0.9rem;">برگشت به صفحه اصلی</a>
+        <!-- آواتار -->
+        <div id="avatar-container" style="text-align: center; margin-bottom: 1rem;"></div>
+
+        <!-- اطلاعات -->
+        <div class="account-info">
+          <p>
+            <span><strong>ایمیل:</strong> <span id="user-email">-</span></span>
+            <button class="copy-btn" data-copy="email" title="کپی ایمیل"><i class="ri-file-copy-line"></i></button>
+          </p>
+          <p>
+            <span><strong>شناسه:</strong> <span id="user-id">-</span></span>
+            <button class="copy-btn" data-copy="id" title="کپی شناسه"><i class="ri-file-copy-line"></i></button>
+          </p>
+          <p><strong>ایجاد حساب:</strong> <span id="created-at">-</span></p>
+          <p><strong>آخرین ورود:</strong> <span id="last-signin">-</span></p>
+          <p><strong>وضعیت ایمیل:</strong> <span id="email-status">-</span></p>
+          <div id="provider-badge"></div>
+        </div>
+
+        <!-- دکمه‌ها -->
+        <button id="open-app" class="login__button">بازگشت به اپلیکیشن</button>
+
+        <div class="action-buttons">
+          <button id="change-password" class="text-button" style="display: none;">تغییر رمز عبور</button>
+          <button id="logout-btn" class="text-button">خروج از حساب</button>
+          <button id="delete-account" class="text-button" style="color: #fca5a5;">حذف حساب</button>
+        </div>
+
+        <div style="margin-top: 1rem; text-align: center;">
+          <a href="/Kingo-compressor/" style="color: #ccc; font-size: 0.9rem;">برگشت به صفحه اصلی</a>
+        </div>
       </div>
     </div>
 
-    <div id="not-logged-in" style="text-align: center; padding: 3rem; color: white; display: none;">
+    <!-- کاربر وارد نشده -->
+    <div id="not-logged-in">
       <h2>لطفاً ابتدا وارد شوید</h2>
       <a href="/Kingo-compressor/" class="login__button" style="display: inline-block; margin-top: 1rem;">ورود</a>
-    </div>
-
-    <div id="loading" style="text-align: center; padding: 3rem; color: white;">
-      <p>در حال بررسی وضعیت...</p>
     </div>
   </div>
 
@@ -41,12 +184,38 @@
 
     const supabase = createClient(
       "https://ymjgidrtdcrwjclwezun.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InltamdpZHJ0ZGNyd2pjbHdlenVuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4MTQxMzQsImV4cCI6MjA3NzM5MDEzNH0.Et8PfbGMB1E2-tyrmd1do53D3BVvS8foa3j9CE596tE"
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInRlZiI6InltamdpZHJ0ZGNyd2pjbHdlenVuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4MTQxMzQsImV4cCI6MjA3NzM5MDEzNH0.Et8PfbGMB1E2-tyrmd1do53D3BVvS8foa3j9CE596tE"
     );
 
+    const loading = document.getElementById("loading");
     const accountSection = document.getElementById("account-section");
     const notLoggedIn = document.getElementById("not-logged-in");
-    const loading = document.getElementById("loading");
+
+    // بازگشت به اپ
+    function redirectToApp(email) {
+      const appUrl = `kingo://auth/callback?email=${encodeURIComponent(email)}`;
+      window.location.href = appUrl;
+    }
+
+    // کپی متن
+    function copyToClipboard(text) {
+      navigator.clipboard.writeText(text).then(() => {
+        alert("کپی شد: " + text);
+      }).catch(() => {
+        alert("خطا در کپی کردن");
+      });
+    }
+
+    // تبدیل تاریخ به شمسی
+    function toJalali(date) {
+      return new Date(date).toLocaleDateString("fa-IR", {
+        year: "numeric",
+        month: "long",
+        day: "numeric",
+        hour: "2-digit",
+        minute: "2-digit"
+      });
+    }
 
     async function checkAuth() {
       loading.style.display = "block";
@@ -54,27 +223,93 @@
       notLoggedIn.style.display = "none";
 
       const { data, error } = await supabase.auth.getUser();
-      
       if (error || !data?.user) {
-        notLoggedIn.style.display = "block";
         loading.style.display = "none";
+        notLoggedIn.style.display = "block";
         return;
       }
 
       const user = data.user;
+      const meta = user.user_metadata || {};
+      const provider = user.app_metadata?.provider || (meta.full_name ? "google" : "email");
 
       loading.style.display = "none";
       accountSection.style.display = "block";
-      document.getElementById("user-email").textContent = user.email || "نامشخص";
+
+      // آواتار
+      if (meta.avatar_url) {
+        const avatar = document.createElement("img");
+        avatar.src = meta.avatar_url;
+        avatar.style.width = "80px";
+        avatar.style.height = "80px";
+        avatar.style.borderRadius = "50%";
+        avatar.style.border = "4px solid rgba(255,255,255,0.3)";
+        avatar.style.marginBottom = "1rem";
+        document.getElementById("avatar-container").appendChild(avatar);
+      }
+
+      // اطلاعات
+      document.getElementById("user-email").textContent = user.email;
       document.getElementById("user-id").textContent = user.id;
-      document.getElementById("login-time").textContent = new Date().toLocaleString("fa-IR");
+      document.getElementById("created-at").textContent = toJalali(user.created_at);
+      document.getElementById("last-signin").textContent = user.last_sign_in_at ? toJalali(user.last_sign_in_at) : "نامشخص";
+
+      // وضعیت ایمیل
+      const emailStatus = document.getElementById("email-status");
+      if (user.email_confirmed_at) {
+        emailStatus.innerHTML = '<i class="ri-check-line" style="color:#4ade80;"></i> تأیید شده';
+      } else {
+        emailStatus.innerHTML = '<i class="ri-close-line" style="color:#f87171;"></i> تأیید نشده';
+      }
+
+      // نوع ورود
+      const badge = document.getElementById("provider-badge");
+      if (provider === "google") {
+        badge.innerHTML = `<div class="google-badge"><i class="ri-google-fill"></i> ورود با گوگل</div>`;
+      } else {
+        badge.innerHTML = `<div class="google-badge" style="background:#6366f1;"><i class="ri-mail-fill"></i> ایمیل و رمز</div>`;
+        document.getElementById("change-password").style.display = "block";
+      }
+
+      // کپی
+      document.querySelectorAll(".copy-btn").forEach(btn => {
+        btn.onclick = () => {
+          const type = btn.dataset.copy;
+          const text = type === "email" ? user.email : user.id;
+          copyToClipboard(text);
+        };
+      });
+
+      // دکمه‌ها
+      document.getElementById("open-app").onclick = () => redirectToApp(user.email);
+
+      document.getElementById("change-password").onclick = () => {
+        const email = prompt("ایمیل خود را وارد کنید:", user.email);
+        if (email && confirm("لینک تغییر رمز به ایمیل ارسال شود؟")) {
+          supabase.auth.resetPasswordForEmail(email, {
+            redirectTo: "https://kingowow.github.io/Kingo-compressor/"
+          }).then(() => alert("لینک ارسال شد!")).catch(() => alert("خطا در ارسال"));
+        }
+      };
+
+      document.getElementById("logout-btn").onclick = () => {
+        if (confirm("از خروج مطمئن هستید؟")) {
+          supabase.auth.signOut().then(() => {
+            window.location.href = "/Kingo-compressor/";
+          });
+        }
+      };
+
+      document.getElementById("delete-account").onclick = async () => {
+        if (!confirm("⚠️ هشدار: این عملیات قابل بازگشت نیست!\nآیا واقعاً می‌خواهید حساب خود را حذف کنید؟")) return;
+        if (!confirm("آخرین تأیید: تمام داده‌ها حذف می‌شوند. ادامه؟")) return;
+
+        // در Supabase، حذف کاربر فقط از طریق Admin API ممکن است
+        alert("حذف حساب در حال حاضر فقط از طریق پنل Supabase امکان‌پذیر است.\nشناسه کاربر: " + user.id);
+      };
     }
 
-    document.getElementById("logout-btn").addEventListener("click", async () => {
-      await supabase.auth.signOut();
-      window.location.href = "/Kingo-compressor/";
-    });
-
+    // اجرای اولیه
     checkAuth();
   </script>
 </body>
